force-app/main/default/objects/Configuration_Attribute__c/Configuration_Attribute__c.object-meta.xml
<CustomObject>
    <label>Configuration Attribute</label>
    <nameField>
        <label>Configuration Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>