force-app/main/default/objects/Configuration_Attribute__c/fields/Balustrade_Seal__c.field-meta.xml
<CustomField>
    <fullName>Balustrade_Seal__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Balustrade Seal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>