force-app/main/default/objects/Configuration_Attribute__c/fields/Cladding_Material__c.field-meta.xml
<CustomField>
    <fullName>Cladding_Material__c</fullName>
    <description>Cladding Material for Railing</description>
    <label>Cladding Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>