force-app/main/default/objects/Configuration_Attribute__c/fields/Cladding_Type__c.field-meta.xml
<CustomField>
    <fullName>Cladding_Type__c</fullName>
    <description>Cladding Type for Railing</description>
    <label>Cladding Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>