force-app/main/default/objects/Configuration_Attribute__c/fields/Configuration_Product__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Product</label>
    <referenceTo>Configuration_Product__c</referenceTo>
    <relationshipLabel>Configuration Attributes</relationshipLabel>
    <relationshipName>Configuration_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>