force-app/main/default/objects/Configuration_Attribute__c/fields/Contract_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Contract_Product_Description__c</fullName>
    <description>Text Field to be used in the contract to fill the RVN specific attributes of the product</description>
    <formula>CASE(
Configuration_Product__r.Product__r.Product_Type__c,
&quot;Glazing&quot;,
&quot;· Lasituksen säätökisko peittää mahdolliset rakenteiden vinoudet ja tiivistää yläkiskon ja katon välisen raon.&quot; &amp;BR()&amp; 
&quot;· &quot;&amp;Glass_Thickness__c&amp;&quot; mm karkaistu turvalasi, &quot; &amp;  LOWER(SUBSTITUTE(SUBSTITUTE(Glass_Color__c, &quot;GLASS_COLOR_&quot;, &quot;&quot;),&quot;_&quot;,&quot; &quot;)) &amp; &quot;, LUMON-parvekelasijärjestelmän lujuuslaskennan mukainen.&quot;&amp;BR()&amp;
&quot;· Yläprofiilin: &quot; &amp; SUBSTITUTE(SUBSTITUTE(Upper_Profile__c, &quot;UPPER_PROFILE_&quot;, &quot;&quot;),&quot;_&quot;,&quot;+&quot;) &amp; &quot; &quot; &amp; Upper_Profile_Color__c&amp;BR()&amp;
&quot;· Alaprofiilin: &quot; &amp; SUBSTITUTE(Lower_Profile__c, &quot;LOWER_PROFILE_&quot;, &quot;&quot;) &amp; &quot; &quot; &amp; Lower_Profile_Color__c&amp;IF(Embedded_Feature__c = &quot;LUMON_EMBEDDED_SYSTEM&quot;,&quot; (Upotettu)&quot;,&quot;&quot;)&amp;BR()&amp;
&quot;· Lasin vetimet: &quot; &amp; CASE(Pull_Latch__c, &quot;DOCXML_NO&quot;, &quot;Ei&quot;, &quot;DOCXML_YES&quot;, &quot;Kyllä&quot;, Pull_Latch__c) &amp;BR()&amp;
IF(AND(Glass_Seals__c != &quot;DOCXML_NO&quot;,Glass_Seals__c != &quot;NO_H-SEAL&quot;), &quot;· Pystypuitteet: &quot; &amp; LOWER(Glass_Seals__c)&amp;BR(), &quot;&quot;)&amp;
&quot;· Reunatiivisteet:&quot;&amp;BR()&amp;
&quot;    Vasen: &quot; &amp; SUBSTITUTE(SUBSTITUTE(Left_Edge_Seal__c, &quot;LEFT_EDGE_SEAL_&quot;, &quot;&quot;),&quot;NO_LEFT_EDGE_SEAL&quot;, &quot;-&quot;)&amp;BR()&amp;
&quot;    Oikea: &quot; &amp; SUBSTITUTE(SUBSTITUTE(Right_Edge_Seal__c, &quot;RIGHT_EDGE_SEAL_&quot;, &quot;&quot;),&quot;NO_RIGHT_EDGE_SEAL&quot;, &quot;-&quot;)&amp;BR()&amp;
&quot; &quot;&amp;BR()
,
&quot;Terraces&quot;,
&quot;· Terassin lasikatto kestää vaadittavat lumikuormat ja sadevedet valuvat integroituun sadevesikouruun.&quot;&amp;BR()&amp;
&quot;· Kattomateriaali: &quot; &amp; Roof_Glass_Material__c &amp;&quot; &quot;&amp; Glass_Color__c &amp; BR() &amp; 
&quot;· Rungon väri: &quot; &amp; Frame_Color__c &amp;BR()&amp;
&quot;· Syöksyputki: &quot;&amp;
CASE(Drain_Pipe__c,&quot;TERRACE_DRAINPIPE_LEFTRIGHT&quot;,&quot;Oikea ja vasen&quot;,&quot;TERRACE_DRAINPIPE_LEFT&quot;,&quot;Vasen&quot;,&quot;TERRACE_DRAINPIPE_RIGHT&quot;,&quot;Oikea&quot;,&quot;DOCXML_NO&quot;,&quot;Ei&quot;,Drain_Pipe__c)&amp;BR()&amp;
IF(Led_Lights__c != &quot;0&quot;, &quot;· LED: Type &quot; &amp; LOWER(Led_Lights__c)&amp;BR(), &quot;&quot;)&amp;
&quot; &quot;&amp;BR()
,
&quot;Text not defined for product&quot;)</formula>
    <inlineHelpText>Product definition that is included in contract.</inlineHelpText>
    <label>Contract Product Description</label>
    <type>Text</type>
</CustomField>