force-app/main/default/objects/Configuration_Attribute__c/fields/Decibel_Sealing__c.field-meta.xml
<CustomField>
    <fullName>Decibel_Sealing__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Decibel Sealing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>