force-app/main/default/objects/Configuration_Attribute__c/fields/Delivery_Batch__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Batch__c</fullName>
    <description>The Number of the Delivery Batch</description>
    <inlineHelpText>The Number of the Delivery Batch</inlineHelpText>
    <label>Delivery Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>