force-app/main/default/objects/Configuration_Attribute__c/fields/Depth1__c.field-meta.xml
<CustomField>
    <fullName>Depth1__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Depth1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>