force-app/main/default/objects/Configuration_Attribute__c/fields/Different_Height_Sides__c.field-meta.xml
<CustomField>
    <fullName>Different_Height_Sides__c</fullName>
    <description>&quot;different_height_sides&quot; in the Visual Output JSON</description>
    <inlineHelpText>&quot;different_height_sides&quot; in the Visual Output JSON</inlineHelpText>
    <label>Different Height Sides</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>