force-app/main/default/objects/Configuration_Attribute__c/fields/Drain_Holes__c.field-meta.xml
<CustomField>
    <fullName>Drain_Holes__c</fullName>
    <description>&quot;drain_holes&quot; in the Visual Output JSON</description>
    <inlineHelpText>&quot;drain_holes&quot; in the Visual Output JSON</inlineHelpText>
    <label>Drain Holes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>