force-app/main/default/objects/Configuration_Attribute__c/fields/Drain_Pipe__c.field-meta.xml
<CustomField>
    <fullName>Drain_Pipe__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Drain Pipe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>