force-app/main/default/objects/Configuration_Attribute__c/fields/Eaves_Left__c.field-meta.xml
<CustomField>
    <fullName>Eaves_Left__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Eaves Left</label>
    <length>255</length>
    <type>Text</type>
</CustomField>