force-app/main/default/objects/Configuration_Attribute__c/fields/Eaves_Right__c.field-meta.xml
<CustomField>
    <fullName>Eaves_Right__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Eaves Right</label>
    <length>255</length>
    <type>Text</type>
</CustomField>