force-app/main/default/objects/Configuration_Attribute__c/fields/Embedded_Feature__c.field-meta.xml
<CustomField>
    <fullName>Embedded_Feature__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Embedded Feature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>