force-app/main/default/objects/Configuration_Attribute__c/fields/Glass_Color__c.field-meta.xml
<CustomField>
    <fullName>Glass_Color__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Glass Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>