force-app/main/default/objects/Configuration_Attribute__c/fields/Glass_Seals__c.field-meta.xml
<CustomField>
    <fullName>Glass_Seals__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Glass Seals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>