force-app/main/default/objects/Configuration_Attribute__c/fields/Handrail_Color__c.field-meta.xml
<CustomField>
    <fullName>Handrail_Color__c</fullName>
    <description>Handrail Color/Material for Railing</description>
    <label>Handrail Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>