force-app/main/default/objects/Configuration_Attribute__c/fields/Handrail_Pipe_Color__c.field-meta.xml
<CustomField>
    <fullName>Handrail_Pipe_Color__c</fullName>
    <description>Handrail Pipe Color for Railing</description>
    <label>Handrail Pipe Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>