force-app/main/default/objects/Configuration_Attribute__c/fields/Handrail_Type__c.field-meta.xml
<CustomField>
    <fullName>Handrail_Type__c</fullName>
    <description>Handrail Type for Railing</description>
    <label>Handrail Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>