force-app/main/default/objects/Configuration_Attribute__c/fields/Height2__c.field-meta.xml
<CustomField>
    <fullName>Height2__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Height2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>