force-app/main/default/objects/Configuration_Attribute__c/fields/Installation_Method__c.field-meta.xml
<CustomField>
    <fullName>Installation_Method__c</fullName>
    <description>Mounting type for Lumon Railing</description>
    <label>Installation Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>