force-app/main/default/objects/Configuration_Attribute__c/fields/Led_Lights__c.field-meta.xml
<CustomField>
    <fullName>Led_Lights__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Led Lights</label>
    <length>255</length>
    <type>Text</type>
</CustomField>