force-app/main/default/objects/Configuration_Attribute__c/fields/Lower_gap_profile__c.field-meta.xml
<CustomField>
    <fullName>Lower_gap_profile__c</fullName>
    <description>Lower gap profile for Railing</description>
    <label>Lower gap profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>