force-app/main/default/objects/Configuration_Attribute__c/fields/Lower_Milling__c.field-meta.xml
<CustomField>
    <fullName>Lower_Milling__c</fullName>
    <description>&quot;lower_milling&quot; in the Visual Output JSON</description>
    <inlineHelpText>&quot;lower_milling&quot; in the Visual Output JSON</inlineHelpText>
    <label>Lower Milling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>