force-app/main/default/objects/Configuration_Attribute__c/fields/Lower_Profile_Color__c.field-meta.xml
<CustomField>
    <fullName>Lower_Profile_Color__c</fullName>
    <description>&quot;lower_profile_color&quot; in the Visual Output JSON</description>
    <inlineHelpText>&quot;lower_profile_color&quot; in the Visual Output JSON</inlineHelpText>
    <label>Lower Profile Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>