force-app/main/default/objects/Configuration_Attribute__c/fields/Posts_Color__c.field-meta.xml
<CustomField>
    <fullName>Posts_Color__c</fullName>
    <description>Posts Color for Railing</description>
    <label>Posts Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>