force-app/main/default/objects/Configuration_Attribute__c/fields/Pull_Latch__c.field-meta.xml
<CustomField>
    <fullName>Pull_Latch__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Pull Latch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>