force-app/main/default/objects/Configuration_Attribute__c/fields/Roof_Glass_Material__c.field-meta.xml
<CustomField>
    <fullName>Roof_Glass_Material__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Roof Glass Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>