force-app/main/default/objects/Configuration_Attribute__c/fields/Side_Amount__c.field-meta.xml
<CustomField>
    <fullName>Side_Amount__c</fullName>
    <description>&quot;side_amount&quot; in the Visual Output JSON</description>
    <inlineHelpText>&quot;side_amount&quot; in the Visual Output JSON</inlineHelpText>
    <label>Side Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>