force-app/main/default/objects/Configuration_Attribute__c/fields/Upholstery_Color__c.field-meta.xml
<CustomField>
    <fullName>Upholstery_Color__c</fullName>
    <description>Upholstery color for Railing</description>
    <label>Upholstery Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>