force-app/main/default/objects/Configuration_Attribute__c/fields/Upper_Fastening_Material__c.field-meta.xml
<CustomField>
    <fullName>Upper_Fastening_Material__c</fullName>
    <description>&quot;upper_fastening_material&quot; in the Visual Output JSON</description>
    <inlineHelpText>&quot;upper_fastening_material&quot; in the Visual Output JSON</inlineHelpText>
    <label>Upper Fastening Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>