force-app/main/default/objects/Configuration_Attribute__c/fields/Vertical_Frame__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Frame__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Vertical Frame</label>
    <length>255</length>
    <type>Text</type>
</CustomField>