force-app/main/default/objects/Configuration_Attribute__c/fields/Width1__c.field-meta.xml
<CustomField>
    <fullName>Width1__c</fullName>
    <description>Source Visual Documentation.xml</description>
    <inlineHelpText>Source Visual Documentation.xml</inlineHelpText>
    <label>Width1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>